<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/instrucciones"
        android:title="@string/instrucciones"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/nuevoJuego"
        android:title="@string/nuevo_juego"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item android:id="@+id/dificultad"
        android:title="@string/dificultad"
        android:orderInCategory="3"
        app:showAsAction="never" >

        <menu>

            <item android:id="@+id/principiante"
                android:title="@string/principiante"
                android:orderInCategory="1"
                app:showAsAction="never"/>

            <item android:id="@+id/amateur"
                android:title="@string/amateur"
                android:orderInCategory="2"
                app:showAsAction="never"/>

            <item android:id="@+id/avanzado"
                android:title="@string/avanzado"
                android:orderInCategory="3"
                app:showAsAction="never"/>

        </menu>

    </item>
</menu>